--- a/style.css
+++ b/style.css
@@ -298,7 +298,92 @@ header{
 .show-products .box img{
     width: 100%;
 }
+/*-----------product update button part-----------*/
+.update-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    background-image: url('images/pexels-valeriya-1639560.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background: #fff; */
+    z-index: 1100;
+    padding: 2rem;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
 
+.update-container form {
+    box-shadow: var(--box-shadow);
+    width: 50%;
+    background: #fff;
+    padding: 1rem;
+    margin: 2rem auto;
+    text-align: center;
+}
+
+.update-container .edit,
+.update-container .btn {
+    width: 40%;
+    cursor: pointer;
+}
+
+.update-container form img {
+    width: 60%;
+}
+
+
+/*----------------------order container----------------------------*/
+.order-container {
+    padding: 3% 7%;
+}
+
+.order-container .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.order-container .box {
+    text-align: left;
+    padding: 1rem;
+}
+
+.order-container .box p {
+    margin-bottom: .5rem;
+    text-transform: capitalize;
+    color: purple;
+}
+
+.order-container .box span {
+    color: #555;
+}
+
+.order-container form {
+    text-align: center;
+}
+
+.order-container form select {
+    width: 100%;
+    margin: 1rem 0;
+    padding: .5rem 0;
+    cursor: pointer;
+}
+
+.order-container form input{
+    box-shadow: none;
+    width: 40%;
+}
+
+.box-container.delete{
+    padding: .6rem 12%;
+}
 
 
 
